--- a/sections/approach.tex
+++ b/sections/approach.tex
@@ -1,5 +1,5 @@
 \chapter{Approach}
-In this chapter, I will outline how my thesis will be realized and provide source code that can be merged into the LiSSA project.
+In this chapter, I will outline how my thesis will be realized and provide source code that can be merged into the \LiSSA project.
 My work aims to implement three different classifiers into the framework.
 First, I plan to implement a simple \ToT classifier in \autoref{approach:sec:tot} to broaden the baseline to compare later optimized prompts against.
 Next, I expect to work on a reduced iterative optimizer in \autoref{approach:sec:naive_iterative} using a naive approach to optimization.
@@ -22,7 +22,7 @@ The prompts by \citewithauthor{hulbert2023UsingTreeofThought} aim to simplify \T
 I will use one of their prompts.
 The benchmark data to compare \ToT prompting with the existing zero-shot and \CoT classifiers also exists in public repositories~\cite{fuchss2022ArDoCoBenchmark, hey2025ReplicationPackage}.
 
-The LiSSA framework is publicly accessible in a repository using the MIT license. Various classifiers are already included there.
+The \LiSSAf is publicly accessible in a repository using the MIT license. Various classifiers are already included there.
 They can be used as an inspiration for development.
 The class \verb|classifier| is an abstraction of all classifiers.
 It provides basic functionality to include further classifiers.
