--- a/sections/related_work.tex
+++ b/sections/related_work.tex
@@ -11,8 +11,8 @@ On the other hand, \APE has a much broader application and research than simply 
 Before the emergence of \LLMs \IR methods were used to recover \TLs.
 \citewithauthor{delucia2012InformationRetrieval} have provided an overview about different \IR methods and their performance. 
 
-More recently, in work by \citewithauthor{hey2021ImprovingTraceability} they tried to overcome the semantic gap, when two instances of the same artifact are described using differing semantics, by exploring word embedding.
-\citewithauthor{keim2021TraceLink} have proposed cross-domain trace link recovery using agent-like machine learning algorithms. 
+More recently, in work by \citewithauthor{hey2021ImprovingTraceability}, they attempted to overcome the semantic gap, which occurs when two instances of the same artifact are described using differing semantics, by exploring word embeddings.
+\citewithauthor{keim2021TraceLink} have proposed cross-domain \TLR using agent-like machine learning algorithms. 
 
 
 
