--- a/tables/FeedbackOptimizer.tex
+++ b/tables/FeedbackOptimizer.tex
@@ -1,32 +1,53 @@
-\begin{tabular}{llcccc}
-\toprule
- & Prompt Group & \multicolumn{3}{c}{Original} & Feedback \\
- & Classifier Model & \makecell{GPT-4o \\ mini} & \makecell{Code- \\ llama} & \makecell{Llama \\ 3.1} & \makecell{GPT-4o \\ mini} \\
-Dataset & Metric &  &  &  &  \\
-\midrule
-\multirow[t]{3}{*}{\rotatebox{90}{CCHIT}} & F1 & 0.178 & 0.180 & 0.178 & 0.175 \\
- & Precision & 0.209 & 0.218 & 0.206 & 0.199 \\
- & Recall & 0.155 & 0.153 & 0.157 & 0.157 \\
-\cline{1-6}
-\multirow[t]{3}{*}{\rotatebox{90}{CM1-NASA}} & F1 & 0.443 & 0.446 & - & 0.436 \\
- & Precision & 0.337 & 0.341 & - & 0.330 \\
- & Recall & 0.644 & 0.644 & - & 0.644 \\
-\cline{1-6}
-\multirow[t]{3}{*}{\rotatebox{90}{GANNT}} & F1 & 0.544 & 0.526 & - & 0.163 \\
- & Precision & 0.544 & 0.538 & - & 0.389 \\
- & Recall & 0.544 & 0.515 & - & 0.103 \\
-\cline{1-6}
-\multirow[t]{3}{*}{\rotatebox{90}{ModisDataset}} & F1 & 0.237 & 0.161 & - & 0.237 \\
- & Precision & 0.212 & 0.238 & - & 0.257 \\
- & Recall & 0.268 & 0.122 & - & 0.220 \\
-\cline{1-6}
-\multirow[t]{3}{*}{\rotatebox{90}{WARC}} & F1 & 0.491 & 0.491 & - & 0.490 \\
- & Precision & 0.378 & 0.429 & - & 0.377 \\
- & Recall & 0.699 & 0.574 & - & 0.699 \\
-\cline{1-6}
-\multirow[t]{3}{*}{\rotatebox{90}{dronology}} & F1 & 0.498 & 0.495 & - & 0.498 \\
- & Precision & 0.387 & 0.413 & - & 0.390 \\
- & Recall & 0.695 & 0.618 & - & 0.691 \\
-\cline{1-6}
-\bottomrule
-\end{tabular}
+
+\begin{tabularx}{\textwidth}{p{1.3em}l Z  Z  Z  Z  Z  Z  Z  Z  Z  Z  Z  Z }
+    \toprule
+    \multirow{2}{1em}[-0.45em]{\rotatebox{90}{Dataset}} & \multirow{2}{*}[-0.9em]{\rotatebox{90}{Metric}}  & \multicolumn{ 3 }{c}{KISS-Original}  & \multicolumn{ 3 }{c}{feedback (mi=1, n=3)}  & \multicolumn{ 3 }{c}{feedback (mi=10, n=5)}  & \multicolumn{ 3 }{c}{feedback (mi=5, n=3)}                                                                                          \\
+    \cmidrule(lr){ 3-5 }
+    \cmidrule(lr){ 6-8 }
+    \cmidrule(lr){ 9-11 }
+    \cmidrule(lr){ 12-14 }
+    &                            & GPT-4o        & GPT-4o-mini        & Llama 3.1        & GPT-4o        & GPT-4o-mini        & Llama 3.1        & GPT-4o        & GPT-4o-mini        & Llama 3.1        & GPT-4o        & GPT-4o-mini        & Llama 3.1           \\
+    \midrule
+    \multirow{ 3 }{*}{\rotatebox{90}{CCHIT}}
+    & P.    & 0.23    & 0.209    & 0.206    & 0.308    & 0.103    & 0.198    & \textbf{ 0.512 }    & 0.235    & 0.321    & 0.385    & 0.244    & 0.198 \\
+    & R.    & 0.155    & 0.155    & \textbf{ 0.157 }    & 0.153    & 0.014    & \textbf{ 0.157 }    & 0.037    & 0.14    & 0.101    & 0.089    & 0.111    & \textbf{ 0.157 } \\
+    & F\textsubscript{1}    & 0.185    & 0.178    & 0.178    & \textbf{ 0.205 }    & 0.024    & 0.175    & 0.07    & 0.175    & 0.153    & 0.144    & 0.152    & 0.175 \\
+    \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
+
+    \multirow{ 3 }{*}{\rotatebox{90}{CM1-NASA}}
+    & P.    & 0.349    & 0.337    & 0.33    & 0.341    & \textbf{ 0.382 }    & 0.33    & 0.333    & 0.367    & 0.364    & 0.345    & 0.372    & 0.33 \\
+    & R.    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & 0.444    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 } \\
+    & F\textsubscript{1}    & 0.453    & 0.443    & 0.436    & 0.446    & \textbf{ 0.479 }    & 0.436    & 0.439    & 0.468    & 0.4    & 0.45    & 0.472    & 0.436 \\
+    \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
+
+    \multirow{ 3 }{*}{\rotatebox{90}{GANNT}}
+    & P.    & 0.552    & 0.544    & 0.561    & 0.544    & 0.561    & 0.561    & 0.561    & 0.544    & 0.558    & 0.552    & 0.561    & \textbf{ 0.562 } \\
+    & R.    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & 0.426    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & 0.529 \\
+    & F\textsubscript{1}    & 0.548    & 0.544    & \textbf{ 0.552 }    & 0.544    & \textbf{ 0.552 }    & \textbf{ 0.552 }    & \textbf{ 0.552 }    & 0.544    & 0.483    & 0.548    & \textbf{ 0.552 }    & 0.545 \\
+    \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
+
+    \multirow{ 3 }{*}{\rotatebox{90}{ModisDataset}}
+    & P.    & 0.212    & 0.212    & 0.224    & 0.423    & 0.224    & 0.345    & 0.579    & 0.474    & 0.147    & 0.31    & 0.262    & \textbf{ 0.667 } \\
+    & R.    & \textbf{ 0.268 }    & \textbf{ 0.268 }    & \textbf{ 0.268 }    & \textbf{ 0.268 }    & \textbf{ 0.268 }    & 0.244    & \textbf{ 0.268 }    & 0.22    & \textbf{ 0.268 }    & 0.22    & \textbf{ 0.268 }    & 0.146 \\
+    & F\textsubscript{1}    & 0.237    & 0.237    & 0.244    & 0.328    & 0.244    & 0.286    & \textbf{ 0.367 }    & 0.3    & 0.19    & 0.257    & 0.265    & 0.24 \\
+    \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
+
+    \multirow{ 3 }{*}{\rotatebox{90}{WARC}}
+    & P.    & 0.394    & 0.38    & 0.377    & 0.396    & \textbf{ 0.454 }    & 0.4    & 0.403    & 0.381    & 0.38    & 0.394    & 0.412    & 0.376 \\
+    & R.    & \textbf{ 0.699 }    & \textbf{ 0.699 }    & 0.684    & \textbf{ 0.699 }    & 0.684    & 0.059    & \textbf{ 0.699 }    & 0.684    & 0.676    & \textbf{ 0.699 }    & 0.691    & 0.691 \\
+    & F\textsubscript{1}    & 0.504    & 0.492    & 0.486    & 0.505    & \textbf{ 0.545 }    & 0.103    & 0.511    & 0.489    & 0.487    & 0.504    & 0.516    & 0.487 \\
+    \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
+
+    \multirow{ 3 }{*}{\rotatebox{90}{dronology}}
+    & P.    & 0.395    & 0.387    & 0.382    & 0.393    & 0.413    & 0.366    & 0.41    & 0.384    & \textbf{ 1.0 }    & 0.406    & 0.396    & 0.333 \\
+    & R.    & \textbf{ 0.695 }    & \textbf{ 0.695 }    & 0.682    & 0.691    & 0.686    & 0.536    & 0.691    & 0.645    & 0.0    & 0.691    & 0.691    & 0.245 \\
+    & F\textsubscript{1}    & 0.504    & 0.498    & 0.489    & 0.501    & \textbf{ 0.515 }    & 0.435    & 0.514    & 0.481    & 0.0    & 0.512    & 0.503    & 0.283 \\
+    \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
+
+    \multirow{ 3 }{*}{\rotatebox{90}{Avg.}}
+    & P.    & 0.355    & 0.345    & 0.347    & 0.401    & 0.356    & 0.367    & \textbf{ 0.466 }    & 0.397    & 0.462    & 0.399    & 0.374    & 0.411 \\
+    & R.    & \textbf{ 0.501 }    & \textbf{ 0.501 }    & 0.496    & 0.5    & 0.473    & 0.364    & 0.48    & 0.48    & 0.319    & 0.481    & 0.491    & 0.402 \\
+    & F\textsubscript{1}    & 0.405    & 0.399    & 0.397    & \textbf{ 0.421 }    & 0.393    & 0.331    & 0.409    & 0.409    & 0.286    & 0.403    & 0.41    & 0.361 \\
+    \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
+
+\end{tabularx}
