--- a/thesis.tex
+++ b/thesis.tex
@@ -17,6 +17,7 @@
 %% Available modes: draft, final (see README)
 \documentclass[twoside, english]{sdqthesis}
 \usepackage{preamble}
+\usepackage{acronyms}
 %% ---------------------------------
 %% | Information about the thesis  |
 %% ---------------------------------
@@ -128,6 +129,7 @@
 \input{sections/conclusion}
 
 
+
 %% --------------------
 %% |   Bibliography   |
 %% --------------------
@@ -138,6 +140,7 @@
 %% ----------------
 %% |   Appendix   |
 %% ----------------
+\todos
 %\appendix
 %\input{sections/appendix}
 
