--- a/sections/evaluation.tex
+++ b/sections/evaluation.tex
@@ -174,6 +174,7 @@ Answer with \textquotesingle{}yes\textquotesingle{} or \textquotesingle{}no\text
 \begin{landscape}
 \begin{table}
     \centering
+    %TODO: Careful, currently the tabularx width is manually replaced with \hsize in the table to adjust to landscape mode
     \renewcommand{\arraystretch}{1}
     \input{tables/FeedbackOptimizer}
     \renewcommand{\arraystretch}{1}
