--- a/tables/ZadenooriOptimizationPrompt.tex
+++ b/tables/ZadenooriOptimizationPrompt.tex
@@ -8,10 +8,28 @@
     \cmidrule(lr){ 9-10 }
     &                            & GPT-4o        & GPT-4o-mini        & GPT-4o        & GPT-4o-mini        & GPT-4o        & GPT-4o-mini        & GPT-4o        & GPT-4o-mini           \\
     \midrule
+    \multirow{ 3 }{*}{\rotatebox{90}{CM1-NASA}}
+    & P.    & 0.349    & 0.337    & 0.354    & \textbf{ 0.372 }    & 0.362    & 0.358    & 0.354    & 0.358 \\
+    & R.    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 } \\
+    & F\textsubscript{1}    & 0.453    & 0.443    & 0.457    & \textbf{ 0.472 }    & 0.464    & 0.46    & 0.457    & 0.46 \\
+    \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
+
+    \multirow{ 3 }{*}{\rotatebox{90}{GANNT}}
+    & P.    & 0.552    & 0.544    & 0.552    & 0.544    & \textbf{ 0.569 }    & 0.544    & 0.552    & \textbf{ 0.569 } \\
+    & R.    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 } \\
+    & F\textsubscript{1}    & 0.548    & 0.544    & 0.548    & 0.544    & \textbf{ 0.556 }    & 0.544    & 0.548    & \textbf{ 0.556 } \\
+    \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
+
     \multirow{ 3 }{*}{\rotatebox{90}{WARC}}
     & P.    & 0.394    & 0.38    & 0.455    & 0.378    & 0.44    & 0.392    & \textbf{ 0.485 }    & 0.383 \\
     & R.    & \textbf{ 0.699 }    & \textbf{ 0.699 }    & \textbf{ 0.699 }    & 0.691    & \textbf{ 0.699 }    & 0.669    & \textbf{ 0.699 }    & 0.684 \\
     & F\textsubscript{1}    & 0.504    & 0.492    & 0.551    & 0.488    & 0.54    & 0.495    & \textbf{ 0.572 }    & 0.491 \\
+    \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
+
+    \multirow{ 3 }{*}{\rotatebox{90}{Avg.}}
+    & P.    & 0.432    & 0.42    & 0.454    & 0.431    & 0.457    & 0.431    & \textbf{ 0.464 }    & 0.437 \\
+    & R.    & \textbf{ 0.629 }    & \textbf{ 0.629 }    & \textbf{ 0.629 }    & 0.626    & \textbf{ 0.629 }    & 0.619    & \textbf{ 0.629 }    & 0.624 \\
+    & F\textsubscript{1}    & 0.502    & 0.493    & 0.519    & 0.501    & 0.52    & 0.5    & \textbf{ 0.526 }    & 0.502 \\
     \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
 
 \end{tabularx}
